# klio

./: .gitignore  README.md  SOCIAL_AUTH_SETUP.md
backend/: .env.example  Caddyfile  DEPLOY.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  auth.py  checkin.py  devices.py  goals.py  profile.py  router.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: analytics.py  auth.py  checkin.py  goal.py  profile.py
backend/app/services/: adapt_service.py  ai_service.py  auth_service.py  goal_schedule.py  insight_service.py  plan_service.py  scheduler.py  social_auth_service.py  sphere_service.py  streak_service.py
backend/docker/: Dockerfile
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py  002_goal_types_and_dob.py  003_social_auth.py  004_goal_taxonomy.py  005_goal_entry_confirmed.py  006_goal_icon.py  007_insight_kind_title.py  008_spheres.py  009_profile_language.py
backend/tests/: conftest.py  factories.py
backend/tests/api/: test_analytics_api.py  test_auth_api.py  test_checkin_api.py  test_devices_api.py  test_goals_api.py  test_profile_api.py
backend/tests/unit/: test_adapt_service.py  test_auth_service.py  test_goal_schedule.py  test_plan_service.py  test_streak_service.py
design-refs/: 01-heatmap.html  02-rings.html  03-hero-number.html  04-timeline.html  05-cardstack.html  06-bento.html  07-progressbars.html  08-dial.html  09-garden.html  10-dashboard.html  11-editorial.html  (+50 more)
(+39 files in other folders)
